# pixel-physician

./: Cargo.toml  README.md
pixel-physician/: Cargo.toml
pixel-physician-tilr/: Cargo.toml  README.md
pixel-physician-tilr/src/: lib.rs  mosaic.rs  tiles.rs  utils.rs
pixel-physician/src/: desktop_capture.rs  main.rs  savers.rs  squaring.rs  util.rs
pixel-physician/src/desktop_capture/: unix.rs
pixel-physician/src/savers/: common.rs  mosaic_to_my_screen.rs  spinny_cube.rs
